# wyqy

./: .gitignore  README.md  deploy-to-github.ps1  docker-compose.yml  view_wyqyan.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: cli.py  config.py  database.py  main.py
backend/app/ai/: classifier.py  engine.py  feature_extractor.py  packet_verifier.py  report_generator.py
backend/app/api/: attack.py  correlation.py  cve.py  export.py  pocs.py  recon.py  reports.py  scans.py  settings.py  tasks.py  templates.py  verify.py  ws.py
backend/app/attack/: deserial_engine.py  fuzzer.py  honeypot_engine.py  jwt_engine.py  linux_privesc.py  ssrf_chain.py  waf_engine.py
backend/app/core/: correlation_engine.py  cvss_calculator.py  finger_map.py  http_client.py  middleware.py  payload_lib.py  perf.py  plugin.py  poc_db.py  poc_db_extra.py  poc_executor.py  session.py  tamper.py  template_engine.py  vuln_classifier.py  vuln_verifier.py
backend/app/knowledge/: __init__.py  cve_db.py
backend/app/middleware/: exceptions.py  request_logger.py
backend/app/models/: custom_poc.py  custom_template.py  report.py  settings.py  task.py  vulnerability.py
backend/app/recon/: fingerprint.py  port_scanner.py  subdomain.py
backend/app/scanner/: base.py  engine.py  loader.py
backend/app/scanner/modules/: __init__.py  cmd_injection_detector.py  confluence_rce.py  csrf_detector.py  custom_template_scanner.py  (+34 more)
backend/app/utils/: helper.py  http_client.py  logger.py
backend/app/ws/: __init__.py  manager.py
backend/tests/: conftest.py  test_main.py
(+88 files in other folders)
